--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-'*.dll' filter=lfs diff=lfs merge=lfs -text
-*.dll filter=lfs diff=lfs merge=lfs -text
+Release/DeepAI.dll filter=lfs diff=lfs merge=lfs -text
